--- a/src/styles/partials/board.scss
+++ b/src/styles/partials/board.scss
@@ -13,14 +13,46 @@
         min-width: 300px;
         margin: 10px;
         padding: 10px; 
+        position: relative;
+        
+    }
 
-        .user-list__card {
-            background-color: #f0f0f0;
-            border-radius: 5px;
-            font-size: .9rem;
-            margin-bottom: 8px;
-            padding: 5px;
+    .user-list__head {
+
+        h2 {
+            margin: 0;
         }
+    }
+
+    .user-list__card {
+        background-color: #f0f0f0;
+        border-radius: 5px;
+        font-size: .9rem;
+        margin-bottom: 8px;
+        padding: 5px;
+    }
+
+    .user-list__button {
+        border: none;
+        background-color: transparent;
+        font-size: .8rem;
+    }
+
+    .user-list__button--primary {
+        color: white;
+        cursor: pointer;
+        display: block;
+        margin-top: 5px;
+        padding: 5px 10px;
+        border-radius: 5px;
+        background-color: rgb(28, 172, 93);
+    }
+}
+
+.addNewCardForm {
+    width: 200px;
+    &.hidden {
+        display: none;
     }
 }
 
